--- a/spotify-app/index.html
+++ b/spotify-app/index.html
@@ -12,6 +12,7 @@
             <div class="screen hide">
                 <div class="header">
                     <a class="back-button" href="#" onclick="javascript:void(0);">Back</a>
+                    <h2 class="view-title">{{ view_title }}</h2>
                 </div>
                 <div class="content">
                 </div>
@@ -24,6 +25,7 @@
 
         <script id="ich_venue_list" type="text/html">
             <ul class="venue-list">
+                <lh>{{ list_title }}</lh>
             </ul>
         </script>
 
@@ -37,6 +39,7 @@
         </script>
 
         <script id="ich_performer_list" type="text/html">
+
             <ul class="performer-list">
             </ul>
         </script>
