require() used now for ensuring files are loaded properly before calling functions

--- a/spotify-app/index.html
+++ b/spotify-app/index.html
@@ -76,23 +76,9 @@
             </div>
         </div> <!-- end #container -->
 
-        <script src="/js/lib/jquery.js"></script>
-        <script src="/js/lib/ICanHaz.min.js"></script>
-        <script src="/js/lib/underscore-min.js"></script>
-
-        <script src="/js/VenueRadio.js"></script>
-
-        <script src="/js/VenueRadioUtil.js"></script>
-        <script src="/js/VenueRadioUserData.js"></script>
-        <script src="/js/PerformerData.js"></script>
-        <script src="/js/ScreenMgr.js"></script>
-        <script src="/js/VenueRadioAuth.js"></script>
-        <script src="/js/VenuesView.js"></script>
-        <script src="/js/VenuesController.js"></script>
-        <script src="/js/VenueInfoView.js"></script>
-        <script src="/js/VenueInfoController.js"></script>
-        <script src="/js/PlaylistView.js"></script>
-        <script src="/js/PlaylistController.js"></script>
-        <script src="/js/VenueRadioApp.js"></script>
+        <script src="scripts/lib/jquery.js"></script>
+        <!-- The rest is loaded via Require -->
+        <script src="scripts/VenueRadioApp.js"></script>
+        
     </body>
 </html>
